test git control

--- a/WCF/前言.md
+++ b/WCF/前言.md
@@ -20,7 +20,6 @@ wcf项目有4个基本组成部分：
 ##### 实现契约和服务
 
 契约通常是一个接口，定义了我们会提供哪些服务。以一个简单的计算器为例，假如我们要提供一个加减法的服务，则定义接口如下：
-
 ```C#
     public interface Icalculator
     {
@@ -31,7 +30,6 @@ wcf项目有4个基本组成部分：
 ```
 
 而服务则是如何实现这个契约，对于上述接口，实现方式如下：
-
 ```C#
     public class CalculatorService : Icalculator
     {
@@ -47,7 +45,7 @@ wcf项目有4个基本组成部分：
     }
 ```
 
-Host如下
+Host如下：
 ```C#
     static void Main(string[] args)
     {
@@ -70,7 +68,7 @@ Host如下
     }
 ```
 
-Client如下
+Client如下：
 ```C#
     static void Main(string[] args)
     {
