--- a/WCF/前言.md
+++ b/WCF/前言.md
@@ -11,6 +11,8 @@ wcf是微软.net框架中，分布式网络通讯框架。基于webservice通讯
 因为是微软下基于.Net整合.Net所有基于分布式通信的技术，微软对其封装使其功能强大使用方便。官方编译器Vs也针对其提供了大量功能，是window系统下优先选择的方案。
 
 #### 3.怎么用wcf：
+wcf相关api在System.ServiceModel程序集中
+
 wcf项目有4个基本组成部分：
 1. Contracts（契约）：主要定义了实现那些服务，如何访问服务
 2. Services（服务）：实现契约定义的方法
@@ -21,9 +23,13 @@ wcf项目有4个基本组成部分：
 
 契约通常是一个接口，定义了我们会提供哪些服务。以一个简单的计算器为例，假如我们要提供一个加减法的服务，则定义接口如下：
 ```C#
+    [ServiceContract]
     public interface Icalculator
     {
+        [OperationContract]
         double Add(double x, double y);
+
+        [OperationContract]
         double Subtract(double x, double y);
     }
 
@@ -50,7 +56,8 @@ Host如下：
     static void Main(string[] args)
     {
         ServiceHost host = new ServiceHost(typeof(CalculatorService));
-        host.AddServiceEndpoint(typeof(ICalculator), new WSHttpBinding(), "http://localhost:8733/Design_Time_Addresses/WcfService/CalculatorService/");
+        host.AddServiceEndpoint(typeof(ICalculator), new WSHttpBinding(),
+         "http://localhost:8733/Design_Time_Addresses/WcfService/CalculatorService/");
         if (host.Description.Behaviors.Find<ServiceMetadataBehavior>() == null)
         {
             ServiceMetadataBehavior behavior = new ServiceMetadataBehavior();
@@ -72,12 +79,10 @@ Client如下：
 ```C#
     static void Main(string[] args)
     {
-        ServiceHost host = new ServiceHost(typeof(CalculatorService));
-        host.Open();
-
-        Console.WriteLine("CalculaorService已经启动，按任意键终止服务！");
-
-        Console.Read();
-        host.Close();
+        using (CalculatorClient proxy = new CalculatorClient())
+        {
+            Console.WriteLine("x + y = {2} when x = {0} and y = {1}", 1, 2, proxy.Add(1, 2));
+            Console.Read();
+        }
     }
 ```
