--- a/WCF/1.契约Contract.md
+++ b/WCF/1.契约Contract.md
@@ -123,3 +123,60 @@ Wcf中是通过注解（Attribute ）向类或方法指定契约的有两种：
 
 
 ####  （2）OperationContract（操作契约）
+对应 System.ServiceModel.OperationContractAttribute 类
+```C#
+[AttributeUsage(AttributeTargets.Method)]
+public sealed class OperationContractAttribute : Attribute
+{
+    public OperationContractAttribute();
+
+    public string Action { get; set; }
+
+    public bool AsyncPattern { get; set; }
+
+    public bool HasProtectionLevel { get; }
+
+    public bool IsInitiating { get; set; }
+
+    public bool IsOneWay { get; set; }
+
+    public bool IsTerminating { get; set; }
+
+    public string Name { get; set; }
+
+    public ProtectionLevel ProtectionLevel { get; set; }
+
+    public string ReplyAction { get; set; }
+}
+```
+
+从上面代码中可以看出
+
+1. OperationContract被规定只可以为 方法 所添加（AttributeTargets.Method）。
+
+2. OperationContract 具有 Action{ get; set; }
+  -
+
+3. OperationContract 具有 AsyncPattern{ get; set; }
+  -
+
+4. OperationContract 具有 HasProtectionLevel{ get; }
+  -
+
+5. OperationContract 具有 IsInitiating{ get; set; }
+  -
+
+6. OperationContract 具有 IsOneWay{ get; set; }
+  -
+
+7. OperationContract 具有 IsTerminating{ get; set; }
+  -
+
+8. OperationContract 具有 Name{ get; set; }
+  -
+
+9. OperationContract 具有 ProtectionLevel{ get; set; }
+  -
+
+10. OperationContract 具有 ReplyAction{ get; set; }
+  -
