--- a/WCF/1.契约Contract.md
+++ b/WCF/1.契约Contract.md
@@ -63,6 +63,7 @@ Wcf中是通过注解（Attribute ）向类或方法指定契约的有两种：
        OperationContext.Current.GetCallbackChannel<IHelloCallbackContract>();
     callerProxy.xxxxxx(arg);
   ```
+  可用于显示上传进度
 
 5. ServiceContract 具有 ConfigurationName{ get; set; }
   - ConfigurationName用于获取或设置配置文件<font color="#4499aa">[3]</font>中的元素名称。
@@ -81,30 +82,33 @@ Wcf中是通过注解（Attribute ）向类或方法指定契约的有两种：
     </system.servicemodel>
   </configuration>
   ```
+  用于查找应用程序配置文件中的服务元素的名称。默认值是服务实现类的名称,对自定义宿主的操作没影响。
 
 6. ServiceContract 具有 HasProtectionLevel{ get; }
-  - 获取此成员是否有一个保护级别。
+  - 获取一个值，该值指示是否必须对此成员的消息进行加密和/或签名。获取此成员是否有一个保护级别。
   - 返回结果: 如果 System.ServiceModel.ServiceContractAttribute.ProtectionLevel 属性不是 System.Net.Security.ProtectionLevel.None，则为true；否则为 false。默认值为 false。
 
 7. ServiceContract 具有 Name{ get; set; }
   - 此属性可以获取和设置 服务协议 的别名，默认为应用了 ServiceContractAttribute 的类或接口的名称。 设置完后可以在 Web 服务描述语言 (WSDL) 中的 <portType> 元素的名称中看到变化，对应客户端生成的Client类名也会发生变化。
 
-8. ServiceContract 具有 Namespace{ get; set; }<font color="#ff8888">############未体会其作用############</font>
+8. ServiceContract 具有 Namespace{ get; set; }
   - Namespace参数用来设置或获取WSDL中<portType>元素的命名空间,为"http://tempuri.org"
 
-    使用命名空间可以防止接口或类的命名冲突。当然也可以用于不想将函数名称以实名暴露在外面。
+    使用命名空间可以防止接口或类的命名冲突，两个契约中拥有一个同名操作 ，一个服务同时实现这两个契约 代码逻辑上 不会出错，但WSDL生成出错！
 
-9. ServiceContract 具有 ProtectionLevel{ get; set; }<font color="#ff8888">############未测试############</font>
-  - 设定保护绑定的要求，每个端点的加密以及数字签名等。
+    使用Namespace设置独立的名称，将会在独立的WSDL生成该契约的映射，两个WSDL互不影响，默认的WSDL将会引用该WSDL。
 
-    ProtectionLevel的参数的值来自System.Net.SecurityLevel.ProtectionLevel枚举,也可以用下面的值：
+9. ServiceContract 具有 ProtectionLevel{ get; set; }
+  - 设定保护绑定的要求，每个端点的加密以及数字签名等。默认值为 System.Net.Security.ProtectionLevel.None
+
+    ProtectionLevel的参数的值来自System.Net.SecurityLevel.ProtectionLevel枚举：
     - EncryptAndSign:签名和加密来保证传输数据的机密性和完成性。
 
       None:只验证。
 
       Sign:签名能够保证传输数据的完整性，不进行加密。
 
-10. ServiceContract 具有 SessionMode{ get; set; }   <font color="#ff8888">############未理解############</font>
+10. ServiceContract 具有 SessionMode{ get; set; }
   - 此属性指定会话的类型，是一个枚举SessionMode:
       - Allowed：如果进入的连接支持可靠会话，则契约支持可靠会话。
 
@@ -155,28 +159,36 @@ public sealed class OperationContractAttribute : Attribute
 1. OperationContract被规定只可以为 方法 所添加（AttributeTargets.Method）。
 
 2. OperationContract 具有 Action{ get; set; }
-  -
+  - 获取或设置请求消息的 WS-Addressing 操作，默认值为[Namespace+"/"+ServiceName+"/"+OperationName]，对应WSDL中peration的input的Action
 
 3. OperationContract 具有 AsyncPattern{ get; set; }
-  -
+  - 指示操作是使用服务协定中的 Begin+methodName 和 End+methodName 方法对异步实现的,默认值为 false。设置
 
 4. OperationContract 具有 HasProtectionLevel{ get; }
-  -
+  - 获取一个值，该值指示是否必须对此操作的消息进行加密和/或签名。获取此操作是否有一个保护级别。
+  - 返回结果: 如果 System.ServiceModel.OperationContractAttribute.ProtectionLevel 属性不是 System.Net.Security.ProtectionLevel.None，则为true；否则为 false。默认值为 false。
 
 5. OperationContract 具有 IsInitiating{ get; set; }
   -
 
 6. OperationContract 具有 IsOneWay{ get; set; }
-  -
+  - 获取或设置一个值，该值指示操作是否返回答复消息（单通、双通）。默认为false，当设置为true时，接口只处理调用处理请求，不返回消息。接口返回类型要设置为void。
 
 7. OperationContract 具有 IsTerminating{ get; set; }
   -
 
 8. OperationContract 具有 Name{ get; set; }
-  -
+  - 此属性可以获取和设置 操作协议 的别名，默认为应用了 OperationContractAttribute 的类或接口的名称。 设置完后可以在 Web 服务描述语言 (WSDL) 中的 <portType> 元素的名称中看到变化，对应客户端生成的方法名也会发生变化。
 
 9. OperationContract 具有 ProtectionLevel{ get; set; }
-  -
+  - 设定保护绑定的要求，每个端点的加密以及数字签名等。默认值为 System.Net.Security.ProtectionLevel.None
+
+      ProtectionLevel的参数的值来自System.Net.Security.ProtectionLevel枚举：
+      - EncryptAndSign:签名和加密来保证传输数据的机密性和完成性。
+
+        None:只验证。
+
+        Sign:签名能够保证传输数据的完整性，不进行加密。
 
 10. OperationContract 具有 ReplyAction{ get; set; }
-  -
+  - 获取或设置用于该操作答复消息的 SOAP 操作的值，默认值为[Namespace+"/"+ServiceName+"/"+OperationName+"Response"],对应WSDL中peration的output的Action
